# hexaTuneProto

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.githooks/: commit-msg  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation.md  feature-request.md  question.md  support.md
.github/workflows/: ci.yml  release.yml
crates/hexa-tune-proto/: Cargo.toml  README.md
crates/hexa-tune-proto-embedded/: Cargo.toml  README.md
crates/hexa-tune-proto-embedded/src/: command.rs  dispatch.rs  error.rs  lib.rs
crates/hexa-tune-proto-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/hexa-tune-proto-ffi/bindings/dart/: README.md
crates/hexa-tune-proto-ffi/bindings/dart/lib/: hexa_tune_proto_ffi.dart
crates/hexa-tune-proto-ffi/include/: hexa_tune_proto.h
crates/hexa-tune-proto-ffi/src/: c_api.rs  lib.rs
crates/hexa-tune-proto/src/: at.rs  codec.rs  error.rs  lib.rs  stream.rs  sysex.rs  usb_midi.rs
crates/hexa-tune-proto/tests/: golden_tests.rs
crates/hexa-tune-proto/tests/fixtures/: commands.jsonl
docs/: ARCHITECTURE.md  BRANCH_STRATEGY.md  CODE_OF_CONDUCT.md  COMMIT_STRATEGY.md  COMMUNITY.md  CONTACT.md  CONTRIBUTING.md  EMBEDDED.md  FFI.md  LABELLING_STRATEGY.md  PROTOCOL.md  PR_STRATEGY.md  SECURITY.md  SUPPORT.md
scripts/: build-android.sh  build-ios.sh  build.sh  changelog.sh  check-nostd.sh  ci.sh  clean.sh  gen-header.sh  lint.sh  publish.sh  setup.sh  test.sh
