[workspace]
resolver = "2"
members = [
    "crates/hexa-tune-proto",
    "crates/hexa-tune-proto-embedded",
    "crates/hexa-tune-proto-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["hexaTune LLC"]
repository = "https://github.com/hTuneSys/hexaTuneProto"
