[workspace]
resolver = "2"
members = [
  "crates/hexa-tune-proto",
  "crates/hexa-tune-proto-embedded",
  "crates/hexa-tune-proto-ffi",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["hexaTune LLC"]
repository = "https://github.com/hTuneSys/hexaTuneProto"

[workspace.dependencies]
hexa-tune-proto = { path = "crates/hexa-tune-proto", version = "0.1.3", default-features = false }
