[package]
name = "hexa-tune-proto-ffi"
description = "hexaTune FFI adapter — C ABI functions for Flutter/Dart integration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories = ["api-bindings"]
keywords = ["midi", "sysex", "ffi", "flutter", "hexatune"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
hexa-tune-proto = { workspace = true, features = ["std"] }

[build-dependencies]
cbindgen = "0.29"
